force-app/main/default/objects/Project__c/fields/Amenties__c.field-meta.xml
<CustomField>
    <fullName>Amenties__c</fullName>
    <label>Amenties</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Private Garden</fullName>
            </value>
            <value>
                <fullName>Club House</fullName>
            </value>
            <value>
                <fullName>Tennis Court</fullName>
            </value>
            <value>
                <fullName>Jogging Track</fullName>
            </value>
            <value>
                <fullName>Temperature Controlled Swimming Pool</fullName>
            </value>
            <value>
                <fullName>Pet Park</fullName>
            </value>
            <value>
                <fullName>Mini Cricket Turf</fullName>
            </value>
            <value>
                <fullName>Football Turf</fullName>
            </value>
            <value>
                <fullName>Basketball Court</fullName>
            </value>
            <value>
                <fullName>Kids Play Area</fullName>
            </value>
            <value>
                <fullName>Adventure and Obstacle Course</fullName>
            </value>
            <value>
                <fullName>Rock Climbing</fullName>
            </value>
            <value>
                <fullName>Archery Range</fullName>
            </value>
            <value>
                <fullName>Miyawaki Forest</fullName>
            </value>
            <value>
                <fullName>Yoga Deck</fullName>
            </value>
            <value>
                <fullName>Senior Citizen Sitout</fullName>
            </value>
            <value>
                <fullName>Amphitheatre</fullName>
            </value>
            <value>
                <fullName>Gymnasium</fullName>
            </value>
            <value>
                <fullName>Yoga Room</fullName>
            </value>
            <value>
                <fullName>Badminton Court</fullName>
            </value>
            <value>
                <fullName>Banquet Hall</fullName>
            </value>
            <value>
                <fullName>Theatre</fullName>
            </value>
            <value>
                <fullName>Dance Room</fullName>
            </value>
            <value>
                <fullName>Crèche</fullName>
            </value>
            <value>
                <fullName>Party Lounge</fullName>
            </value>
            <value>
                <fullName>Cycle Track</fullName>
            </value>
            <value>
                <fullName>Volley Ball Court</fullName>
            </value>
            <value>
                <fullName>Swimming Pool</fullName>
            </value>
            <value>
                <fullName>Outdoor Gym</fullName>
            </value>
            <value>
                <fullName>High-Speed Elevators</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>