force-app/main/default/objects/Project__c/fields/Booking_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Booking_Percentage__c</fullName>
    <formula>(Booked_Units__c  /  Total_Units__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>