force-app/main/default/objects/Project__c/fields/City1__c.field-meta.xml
<CustomField>
    <fullName>City1__c</fullName>
    <label>City</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hyderabad</fullName>
            </value>
            <value>
                <fullName>Bangalore</fullName>
            </value>
            <value>
                <fullName>Goa</fullName>
            </value>
            <value>
                <fullName>Mysore</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>