force-app/main/default/objects/Project__c/fields/COO__c.field-meta.xml
<CustomField>
    <fullName>COO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>COO</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects3MSj</relationshipName>
    <type>Lookup</type>
</CustomField>