force-app/main/default/objects/Project__c/fields/Default_Project__c.field-meta.xml
<CustomField>
    <fullName>Default_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default Project</label>
    <type>Checkbox</type>
</CustomField>