force-app/main/default/objects/Project__c/fields/Distance_x__c.field-meta.xml
<CustomField>
    <fullName>Distance_x__c</fullName>
    <label>Distance x</label>
    <length>255</length>
    <type>Text</type>
</CustomField>