force-app/main/default/objects/Project__c/fields/Distance_y__c.field-meta.xml
<CustomField>
    <fullName>Distance_y__c</fullName>
    <label>Distance y</label>
    <length>255</length>
    <type>Text</type>
</CustomField>