force-app/main/default/objects/Project__c/fields/Legal_Document_Link__c.field-meta.xml
<CustomField>
    <fullName>Legal_Document_Link__c</fullName>
    <label>Legal Document Link</label>
    <type>Url</type>
</CustomField>