force-app/main/default/objects/Project__c/fields/Project_Status_URL__c.field-meta.xml
<CustomField>
    <fullName>Project_Status_URL__c</fullName>
    <formula>HYPERLINK(&quot;/apex/ProjectStatus?pid=&quot; &amp; Id, &quot;Open Project Status&quot;, &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Status URL</label>
    <type>Text</type>
</CustomField>