force-app/main/default/objects/Project__c/fields/SAN_HSN_CODE__c.field-meta.xml
<CustomField>
    <fullName>SAN_HSN_CODE__c</fullName>
    <label>SAN/HSN CODE</label>
    <length>38</length>
    <type>Text</type>
</CustomField>