force-app/main/default/objects/Project__c/fields/Unit_Type__c.field-meta.xml
<CustomField>
    <fullName>Unit_Type__c</fullName>
    <label>Unit Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Villa</fullName>
            </value>
            <value>
                <fullName>Duplex Villa</fullName>
            </value>
            <value>
                <fullName>Apartments</fullName>
            </value>
            <value>
                <fullName>Plots</fullName>
            </value>
            <value>
                <fullName>Villaments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>