force-app/main/default/objects/Project__c/fields/X_Major__c.field-meta.xml
<CustomField>
    <fullName>X_Major__c</fullName>
    <label>X Major</label>
    <length>255</length>
    <type>Text</type>
</CustomField>