force-app/main/default/objects/Project__c/fields/Y_Major__c.field-meta.xml
<CustomField>
    <fullName>Y_Major__c</fullName>
    <label>Y Major</label>
    <length>255</length>
    <type>Text</type>
</CustomField>